--- a/gramophone/src/main/resources/application.properties
+++ b/gramophone/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8189
 server.servlet.context-path=/gramophone
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jackson.serialization.indent_output=true
